<resources>
    <string name="app_name">RChrono</string>

    <string name="chronometre_start">Démarrer</string>
    <string name="chronometre_pause">Pause</string>
    <string name="chronometre_reset">Remise à zéro</string>

    <string name="descChronometre_Exercice">Exercice</string>
    <string name="descChronometre_Sequence">Séquence</string>
    <string name="descChronometre_Total">Total</string>

    <string name="title_activity_liste_sequences">Programme</string>
    <string name="listesequences_retour">Retour</string>
    <string name="listesequences_ajoutsequence">Ajouter une séquence</string>
    <string name="listeSequences_tempstotal">Durée :</string>


    <string name="alertDialog_suppr">Supprimer</string>
    <string name="alertDialog_dutelephone">du téléphone ?</string>
    <string name="alertDialog_annuler">Annuler</string>

    <string name="dialogRep_Ok">Valider</string>
    <string name="dialogRep_Repetition">Répétitions :</string>

    <string name="dialogEnrSeq_Modifications">Modifications</string>
    <string name="dialogEnrSeq_Ecraser">Enregistrer</string>
    <string name="dialogEnrSeq_Nouvelle">Dupliquer la séquence</string>
    <string name="dialogEnrSeq_Cancel">Ne pas enregistrer</string>

    <string name="title_activity_ajout_sequence">Liste des séquences</string>
    <string name="ajoutsequence_creer">Créer une séquence</string>
    <string name="ajoutsequence_sequence_utilisee">Suppression impossible, la séquence est utilisée</string>

    <string name="title_activity_ajout_exercice">Liste des exercices</string>
    <string name="ajoutexercice_creer">Créer un exercice</string>
    <string name="ajoutexercice_exercice_utilise">Suppression impossible</string>


    <string name="title_activity_editionSequence">Edition de la séquence</string>
    <string name="editionseq_exercice">Exercices :</string>
    <string name="editionseq_listeVide">La sequence est vide\nRetour pour annuler les modifications</string>

    <string name="editionseq_frag_detail_nom">Nom :</string>
    <string name="editionseq_frag_detail_repetitions">Nombre de répétitions :</string>
    <string name="editionseq_frag_detail_sythesevocale">Sythèse vocale :</string>
    <string name="editionseq_frag_detail_svnom">Nom</string>
    <string name="editionseq_frag_detail_svduree">Durée</string>

    <string name="editionseq_frag_btnexercice_creer">Créer</string>
    <string name="editionseq_frag_btnexercice_ajouter">Ajouter</string>


    <string name="editionex_frag_detail_nom">Nom :</string>
    <string name="editionex_frag_detail_description">Description :</string>
    <string name="editionex_frag_detail_duree">Durée :</string>
    <string name="editionex_frag_detail_sythesevocale">Sythèse vocale :</string>
    <string name="editionex_frag_detail_svnom">Nom</string>
    <string name="editionex_frag_detail_svduree">Durée</string>
    <string name="editionex_frag_detail_notification">Notification :</string>
    <string name="editionex_frag_detail_nvibreur">Vibreur</string>
    <string name="editionex_frag_detail_npopup">Popup</string>
    <string name="editionex_frag_detail_nsonnerie">Sonnerie</string>
    <string name="editionex_frag_detail_sonnerie">Sonnerie :</string>

    <string name="editionex_frag_playlist_jouerplaylist">Jouer la playlist</string>
    <string name="editionex_frag_playlist_editionplaylist">Modifier la playlist</string>

    <string name="editionex_frag_ajoutmorceau_btnajout">Ajouter un morceau</string>

    <string name="editionex_frag_valider_btnvalider">Valider</string>

    <string name="menu_supprimer">Supprimer</string>
    <string name="menu_quitter">Quitter</string>


    <string name="dialogDuree_duree">Durée :</string>

    <string name="alert_dureeTotaleTropGrande">100 heures maximum</string>
    <string name="title_activity_liste_sons">ListeSons</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


</resources>






