<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editionex_frag_detail_nom"
            android:textColor="@color/Green" />

        <EditText
            android:id="@+id/editionex_frag_detail_etxtNom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/editionex_frag_detail_description"
            android:textColor="@color/Green" />

        <EditText
            android:id="@+id/editionex_frag_detail_etxtDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@color/Green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/editionex_frag_detail_duree"
            android:textColor="@color/Green" />

        <EditText
            android:id="@+id/editionex_frag_detail_etxtDuree"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/Green" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/editionex_frag_detail_sythesevocale"
        android:textColor="@color/Green" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/editionex_frag_detail_tbNom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editionex_frag_detail_svnom"
            android:textColor="@color/Green"
            android:textOff="@string/editionex_frag_detail_svnom"
            android:textOn="@string/editionex_frag_detail_svnom" />

        <ToggleButton
            android:id="@+id/editionex_frag_detail_tbDuree"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editionex_frag_detail_svduree"
            android:textColor="@color/Green"
            android:textOff="@string/editionex_frag_detail_svduree"
            android:textOn="@string/editionex_frag_detail_svduree" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/editionex_frag_detail_notification"
        android:textColor="@color/Green" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/editionex_frag_detail_tbVibreur"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editionex_frag_detail_nvibreur"
            android:textColor="@color/Green"
            android:textOff="@string/editionex_frag_detail_nvibreur"
            android:textOn="@string/editionex_frag_detail_nvibreur" />

        <ToggleButton
            android:id="@+id/editionex_frag_detail_tbPopup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editionex_frag_detail_npopup"
            android:textColor="@color/Green"
            android:textOff="@string/editionex_frag_detail_npopup"
            android:textOn="@string/editionex_frag_detail_npopup" />

        <ToggleButton
            android:id="@+id/editionex_frag_detail_tbSonnerie"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editionex_frag_detail_nsonnerie"
            android:textColor="@color/Green"
            android:textOff="@string/editionex_frag_detail_nsonnerie"
            android:textOn="@string/editionex_frag_detail_nsonnerie" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/editionex_frag_detail_sonnerie"
            android:textColor="@color/Green" />

        <EditText
            android:id="@+id/editionex_frag_detail_etxtSonnerie"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/Green" />
    </LinearLayout>

</LinearLayout>