<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/dialFragEnrSeqEcraser"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/bouton"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/dialogEnrSeq_Ecraser"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="#ff000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/dialFragEnrSeqNouvelle"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/bouton"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/dialogEnrSeq_Nouvelle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="#ff000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/dialFragEnrSeqCancel"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/bouton"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/dialogEnrSeq_Cancel"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="#ff000000"
        android:textSize="25sp" />

</LinearLayout>